# pigeon-defence

./: TODO.md
workspaces/pd-node/: pd-node  pyproject.toml
workspaces/pd-node/pd_node/: __main__.py
workspaces/pd-node/pd_node/engines/: recorder.py
workspaces/pd-node/pd_node/engines/composer/: utils.py
workspaces/pd-node/pd_node/engines/inference/: thread.py
workspaces/pd-node/pd_node/engines/motor/: utils.py
workspaces/pd-node/pd_node/engines/recorder/: __init__.py  ffmpeg.py  thread.py  utils.py
workspaces/pd-node/pd_node/static/: gamepad.js  index.html  index.js  timeline.css  timeline.js
workspaces/pd-node/pd_node/utils/: __init__.py  stream.py
workspaces/pd-node/scripts/: build.sh  install.sh
