[project]
name = "pd-node"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "lap>=0.5.13",
    "linuxpy>=0.24.0",
    "ncnn>=1.0.20260114",
    "opencv-python-headless>=4.13.0.92",
    "pnnx>=20260409",
    "pyinstaller>=6.20.0",
    "rpi-gpio>=0.7.1",
    "sqlmodel>=0.0.38",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.45",
    "uvicorn>=0.46.0",
]

[tool.uv]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'"
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
pd-node = { workspace = true, editable = true }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.setuptools.packages.find]
include = ["pd_node*"]

[dependency-groups]
dev = [
    "pd-node",
    "pytest>=9.0.3",
    "pytest-watcher>=0.6.3",
]


